--- a/Fundoo/src/app/components/dashboard/dashboard.component.html
+++ b/Fundoo/src/app/components/dashboard/dashboard.component.html
@@ -37,8 +37,8 @@
         </div>
         <div>
           <button mat-icon-button color="basic" id="grid" matTooltip="grid" (click)="change()" (click)="grid()">
-           <div *ngIf = "isClicked == false"><mat-icon>border_all</mat-icon></div>
-           <div *ngIf = "isClicked == true"><mat-icon>view_agenda</mat-icon></div>
+           <div *ngIf = "isClicked == true"><mat-icon>border_all</mat-icon></div>
+           <div *ngIf = "isClicked == false"><mat-icon>view_agenda</mat-icon></div>
           </button>
         </div>
         <div>
