--- a/Fundoo/src/app/components/display-trash/display-trash.component.html
+++ b/Fundoo/src/app/components/display-trash/display-trash.component.html
@@ -1,9 +1,9 @@
 <div class="display">
-    <div class="mininote" fxLayout="row wrap" fxLayoutAlign="center center" fxFlex.xs="98" fxLayoutGap="10px" fxFlex="80">
-  
-      <!-- <div *ngFor="let items of cardsArray" class="card"> -->
-      <div *ngFor="let items of card" class="card">
-        <div *ngIf="items.trash == true">
+  <div class="mininote" fxLayout="row wrap" fxLayoutAlign="center center" fxFlex.xs="98" fxLayoutGap="10px" fxFlex="80">
+
+    <!-- <div *ngFor="let items of cardsArray" class="card"> -->
+    <div *ngFor="let items of card" class="card">
+      <div *ngIf="items.trash == true">
         <mat-card class="minicard" [style.backgroundColor]="items.color">
           <div>
             <div fxLayout="row" class="title">
@@ -16,20 +16,34 @@
                       <img src="../../../assets/pin.svg">
                     </div>
                 </button> -->
-  
+
               <!-- <div fxLayout="row" fxLayoutAlign="end start">
                 <button mat-icon-button></button>
               </div> -->
             </div>
-            <div>{{items.description}}</div>
+             <div>{{items.description}}</div>
+           <!-- <div>
+              <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                <mat-icon>more_vert</mat-icon>
+              </button>
+              <mat-menu #menu="matMenu">
+                <button mat-menu-item (click)="delete()">
+                  <span>Delete forever</span>
+                </button>
+                <button mat-menu-item>
+                  <span>Restore</span>
+                </button>
+              </mat-menu>
+            </div> -->
             <div class="icons-div">
               <app-icon-list fxLayout="row" [card]="items" fxLayoutAlign="space-between end" (updateEvent)=update($event)
                 (colorchange)="changeOfColor($event)">
               </app-icon-list>
             </div>
+            <button mat-button (click)="restore(items.noteId)">Restore</button>
           </div>
         </mat-card>
       </div>
     </div>
-    </div>
   </div>
+</div>
