--- a/Fundoo/src/app/components/dashboard/dashboard.component.scss
+++ b/Fundoo/src/app/components/dashboard/dashboard.component.scss
@@ -65,9 +65,28 @@
   }
 
   .profile{
-    width:47px;
-    height:47px
+    width:90px;
+    height:90px
   }
 
-
+  .view{
+    margin-top: 11px;
+  }
   
+  .signout{
+    margin-right:10px;
+  }
+
+  // .q{
+  //   max-width: 300px;
+  //   margin-left: 35px;
+  //   height : 184px;
+  //   transform-origin: right top;
+  //   width: 339px;
+  // }
+ 
+
+  .email{
+    margin-top: 35px;
+    margin-left: 10px;
+  }
