--- a/Fundoo/src/app/components/display-archive/display-archive.component.html
+++ b/Fundoo/src/app/components/display-archive/display-archive.component.html
@@ -1,10 +1,10 @@
 <div class="display">
-    <div class="mininote" fxLayout="row wrap" fxLayoutAlign="center center" fxFlex.xs="98" fxLayoutGap="10px" fxFlex="80">
-      <!-- <div *ngFor="let items of cardsArray" class="card"> -->
-      <div *ngFor="let items of card" class="card">
-        <div *ngIf="items.archive==true">
+  <div class="mininote" fxLayout="row wrap" fxLayoutAlign="center center" fxFlex.xs="98" fxLayoutGap="10px" fxFlex="80">
+    <!-- <div *ngFor="let items of cardsArray" class="card"> -->
+    <div *ngFor="let items of card" class="card">
+      <div *ngIf="items.archive==true">
         <mat-card class="minicard" [style.backgroundColor]="items.color">
-          <div>
+          <div fxLayout="row" fxLayoutAlign="space-between start">
             <div fxLayout="row" class="title">
               <span (click)="getNoteId(items)">{{items.title}}</span>
               <!-- <button mat-icon-button color="basic" (click)="pinned(items)" fxLayoutAlign="end start">
@@ -15,20 +15,31 @@
                       <img src="../../../assets/pin.svg">
                     </div>
                 </button> -->
-  
+
               <!-- <div fxLayout="row" fxLayoutAlign="end start">
                 <button mat-icon-button></button>
               </div> -->
             </div>
-            <div>{{items.description}}</div>
-            <div class="icons-div">
-              <app-icon-list fxLayout="row" [card]="items" (updateEvent)=update($event) fxLayoutAlign="space-between end"
-                (colorchange)="changeOfColor($event)" (childObject)="update($event)">
-              </app-icon-list>
+            <div>
+              <button mat-icon-button color="basic" (click)="pinned(items)">
+                <div class="pin" *ngIf="items.pinned==false">
+                  <img src="../../../assets/pin.svg">
+                </div>
+                <div class="barpin" *ngIf="items.pinned==true">
+                  <img src="../../../assets/barpin.svg">
+                </div>
+              </button>
             </div>
           </div>
+          <div>{{items.description}}</div>
+          <div class="icons-div">
+            <app-icon-list fxLayout="row" [card]="items" (updateEvent)=update($event) fxLayoutAlign="space-between end"
+              (colorchange)="changeOfColor($event)" (childObject)="update($event)">
+            </app-icon-list>
+          </div>
+
         </mat-card>
       </div>
     </div>
-    </div>
   </div>
+</div>
