--- a/Fundoo/src/app/components/maincard/maincard.component.html
+++ b/Fundoo/src/app/components/maincard/maincard.component.html
@@ -5,7 +5,7 @@
     <div data-text="Take a note.." class="Border" id="noteTitle" fxLayout="column" contenteditable="true"
       class="maincard"></div>
 
-    <div fxLayout="row" fxLayoutAlign="end start" fxFlex.xs="100">
+    <div fxLayout="row" fxLayoutAlign="end start" fxFlex.xs="100" fxLayoutGap="40%">
       <mat-icon class="check" matTooltip="New List">check_box</mat-icon>
 
       <mat-icon class="brush" matTooltip="Drawing is not available">brush</mat-icon>
