--- a/Fundoo/src/app/components/dashboard/dashboard.component.scss
+++ b/Fundoo/src/app/components/dashboard/dashboard.component.scss
@@ -86,7 +86,7 @@
   // }
  
 
-  .email{
-    margin-top: 35px;
-    margin-left: 10px;
-  }
+  // .email{
+  //   margin-top: 35px;
+  //   margin-left: 10px;
+  // }
