--- a/Fundoo/src/app/components/display-archive/display-archive.component.scss
+++ b/Fundoo/src/app/components/display-archive/display-archive.component.scss
@@ -13,3 +13,60 @@
 .title{
     margin-bottom: 5%;
 }
+
+.example-chip-list {
+    width: 100%;
+}
+
+.matcard{
+    width: 645px;
+}
+
+.remainder{
+    margin-top: 20px;
+}
+
+.minicard:hover .icons-div{
+    visibility: visible;
+}
+.icons-div{
+    visibility: hidden;
+}
+
+// .minicard:hover .pin{
+//     visibility: visible;
+// }
+// .pin{
+//     visibility: hidden;
+// }
+
+
+// .minicard:hover .example-chip-list{
+//     visibility: visible;
+// }
+// .example-chip-list{
+//     visibility: hidden;
+// }
+
+
+
+
+
+
+
+
+// .minicard{
+//     margin-bottom: 24px
+// }
+// .mininote{
+//     display: flex;
+//     flex-direction: row;
+//    margin-top: 3%
+// }
+// .display{
+//     justify-content:center;
+// }
+
+// .title{
+//     margin-bottom: 5%;
+// }
