--- a/Fundoo/src/app/components/display-notes/display-notes.component.html
+++ b/Fundoo/src/app/components/display-notes/display-notes.component.html
@@ -12,7 +12,7 @@
             <div fxLayout="row" class="title">
               <span (click)="openDialog(items)">{{items.title}}</span>
             </div>
-            <div>
+            <div class="icons-div">
               <button mat-icon-button color="basic" (click)="pinned(items)">
                 <div class="pin" *ngIf="items.pinned==false">
                   <img src="../../../assets/pin.svg">
@@ -35,6 +35,19 @@
               </mat-chip>
             </mat-chip-list>
           </div>
+          <div *ngIf = "items.remainder != null" >
+            <div class="example-chip-list">
+              <br>
+              <mat-chip-list #chipList class = "remainder">
+                <mat-chip [removable]="removable" [selectable]="selectable" (removed)="removeRemainder(items)">
+                  {{items.remainder | date:'medium'}}
+                <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                </mat-chip>
+                <!-- <input [matChipInputFor]="chipList"> -->
+              </mat-chip-list>
+            </div>
+          </div>
+          
 
           <div class="icons-div">
             <app-icon-list fxLayout="row" [card]="items" (updateEvent)=update($event) fxLayoutAlign="space-between end"
@@ -62,7 +75,7 @@
               <span (click)="openDialog(items)">{{items.title}}</span>
             </div>
 
-            <div>
+            <div class="icons-div">
               <button mat-icon-button color="basic" (click)="pinned(items)">
                 <div class="pin" *ngIf="items.pinned==false">
                   <img src="../../../assets/pin.svg">
