--- a/Fundoo/src/app/components/display-remainder/display-remainder.component.html
+++ b/Fundoo/src/app/components/display-remainder/display-remainder.component.html
@@ -6,13 +6,13 @@
     <div *ngFor="let items of card" class="card">
 
       <!-- <div *ngIf="items.archive==false && items.trash==false && items.pinned==true"> -->
-      <div *ngIf="items.archive==true && items.trash==false">
+      <div *ngIf="items.archive==false && items.trash==false && items.remainder != null">
         <mat-card class="minicard" [style.backgroundColor]="items.color">
           <div fxLayout="row" fxLayoutAlign="space-between start">
             <div fxLayout="row" class="title">
               <span (click)="openDialog(items)">{{items.title}}</span>
             </div>
-            <div class="icons-div" class="icons-div">
+            <div class="icons-div">
               <button mat-icon-button color="basic" (click)="pinned(items)">
                 <div class="pin" *ngIf="items.pinned==false">
                   <img src="../../../assets/pin.svg">
@@ -40,7 +40,7 @@
               <br>
               <mat-chip-list #chipList class = "remainder">
                 <mat-chip [removable]="removable" [selectable]="selectable" (removed)="removeRemainder(items)">
-                  {{items.remainder | date}}
+                  {{items.remainder}}
                 <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
                 </mat-chip>
                 <!-- <input [matChipInputFor]="chipList"> -->
@@ -67,7 +67,7 @@
     <div *ngFor="let items of card" class="card">
 
       <!-- <div *ngIf="items.archive==false && items.trash==false && items.pinned==true"> -->
-      <div class = "matcard" *ngIf="items.archive==true && items.trash==false">
+      <div class = "matcard" *ngIf="items.archive==false && items.trash==false && items.remainder != null">
         <mat-card class="minicard" [style.backgroundColor]="items.color">
           <div fxLayout="row" fxLayoutAlign="space-between start" >
 
@@ -112,51 +112,3 @@
     </div>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <div class="display">
-  <div class="mininote" fxLayout="row wrap" fxLayoutAlign="center center" fxFlex.xs="98" fxLayoutGap="10px" fxFlex="80">
-    <div *ngFor="let items of card" class="card">
-      <div *ngIf="items.archive == true && items.trash == false">
-        <mat-card class="minicard" [style.backgroundColor]="items.color">
-          <div fxLayout="row" fxLayoutAlign="space-between start">
-            <div fxLayout="row" class="title">
-              <span (click)="getNoteId(items)">{{items.title}}</span>
-            </div>
-            <div>
-              <button mat-icon-button color="basic" (click)="pinned(items)">
-                <div class="pin" *ngIf="items.pinned==false">
-                  <img src="../../../assets/pin.svg">
-                </div>
-                <div class="barpin" *ngIf="items.pinned==true">
-                  <img src="../../../assets/barpin.svg">
-                </div>
-              </button>
-            </div>
-          </div>
-          <div>{{items.description}}</div>
-          <div class="icons-div">
-            <app-icon-list fxLayout="row" [card]="items" (updateEvent)=update($event) fxLayoutAlign="space-between end"
-              (colorchange)="changeOfColor($event)" (childObject)="update($event)">
-            </app-icon-list>
-          </div>
-
-        </mat-card>
-      </div>
-    </div>
-  </div>
-</div> -->
