--- a/Fundoo/src/app/components/icon-list/icon-list.component.scss
+++ b/Fundoo/src/app/components/icon-list/icon-list.component.scss
@@ -1,3 +1,15 @@
 // .date{
 //     margin-left: 1%;
 // }
+.q{
+    width: 280px;
+}
+
+.colors{
+    width: 32px;
+    height: 32px;
+}
+
+.icon{
+    width:20px;
+}
