--- a/Fundoo/src/app/components/profilepic/profilepic.component.html
+++ b/Fundoo/src/app/components/profilepic/profilepic.component.html
@@ -1,35 +1,29 @@
-<div  fxLayout="column" fxLayoutGap="15px">
+<div fxLayout="column" fxLayoutGap="15px" class="profile" fxFlex="100">
   <div>
     <span>Select profile photo</span>
-  </div >
+  </div>
   <div>
     <b>Upload photos</b>
   </div>
   <mat-divider></mat-divider>
-  <div  fxLayout="column" fxLayoutAlign="space-between center">
-      <div>
-          <input type="file" (change)="fileChangeEvent($event)" />
-    
-          <image-cropper
-              [imageChangedEvent]="imageChangedEvent"
-              [maintainAspectRatio]="true"
-              [aspectRatio]="4 / 3"
-              [resizeToWidth]="128"
-              format="png"
-              (imageCropped)="imageCropped($event)"
-          ></image-cropper>
-          
-          <img [src]="croppedImage" />
-      </div>
-    
-      <div fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="start end">
-          <button mat-raised-button color = "primary"  [mat-dialog-close]="croppedImage" cdkFocusInitial>Set profile photo</button>
-          <button mat-button (click)="onNoClick()">Cancel</button>
-          <!-- <button mat-button (click)="onNoClick()">Cancle</button> -->
-      </div>
+  <div fxLayout="column" fxLayoutAlign="space-between none">
+    <div>
+      <input type="file" (change)="fileChangeEvent($event)" />
+
+      <image-cropper [imageChangedEvent]="imageChangedEvent" [maintainAspectRatio]="true" [aspectRatio]="4 / 3"
+        [resizeToWidth]="128" format="png" (imageCropped)="imageCropped($event)"></image-cropper>
+
+      <!-- <img [src]="croppedImage" /> -->
+    </div>
+    <div fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="start end">
+      <button mat-raised-button color="primary" [mat-dialog-close]="crop" cdkFocusInitial (click)="setProfile()">Set
+        profile photo</button>
+      <button mat-button (click)="onNoClick()">Cancel</button>
+      <!-- <button mat-button (click)="onNoClick()">Cancle</button> -->
+    </div>
   </div>
 </div>
 
 
-  <!-- (imageLoaded)="imageLoaded()"
+<!-- (imageLoaded)="imageLoaded()"
           (loadImageFailed)="loadImageFailed()"  -->
